--- a/src/views/home.css
+++ b/src/views/home.css
@@ -143,7 +143,7 @@
 
 .lantern {
   position: absolute;
-  z-index: 2; /* behind tree & text */
+  z-index: 2; 
   height: auto;
   opacity: 0.95;
   filter: drop-shadow(0 0 22px rgba(255, 200, 140, 0.9))
