--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -4,6 +4,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 60px;
   padding: 1rem 2rem;
   display: flex;
   justify-content: space-between;
@@ -29,6 +30,12 @@
 .logo:hover {
   text-shadow: 0 0 12px rgba(224,230,255,0.9), 0 0 25px rgba(150,200,255,0.8);
 }
+.logo-img {
+  height: 100px;  
+  width: auto;
+  display: block;
+}
+
 
 /* Links */
 .nav-links {
